<resources>
    <string name="app_name">rastreio_how6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_para_lojistas">Login para Lojistas</string>
    <string name="cnpj">CNPJ</string>
    <string name="senha">Senha</string>
    <string name="realizar_login">Realizar Login</string>
    <string name="cadastrar_loja">Cadastrar Loja</string>
    <string name="rastrear_encomenda">Rastrear Encomenda</string>
    <string name="digite_o_c_digo_da_encomenda">Digite o código da encomenda</string>
    <string name="encomenda">Encomenda</string>
    <string name="status">Status:</string>
    <string name="data_envio">Data Envio:</string>
    <string name="vazio">--</string>
    <string name="data_altera_o">Data Alteração</string>
    <string name="nome">Nome:</string>
    <string name="valor">Valor:</string>
    <string name="descri_o">Descrição:</string>
    <string name="voltar">Voltar</string>
    <string name="cadastro_para_lojistas">Cadastro para Lojistas</string>
    <string name="nomeLojista">Nome</string>
    <string name="editar_dados">Editar Dados</string>
    <string name="listar_encomendas">Listar Encomendas</string>
    <string name="editar_dados_loja">Editar Dados Loja</string>
    <string name="salvar_altera_es">Salvar Alterações</string>
    <string name="cadastrar_encomenda">Cadastrar Encomenda</string>
    <string name="atualizar_encomenda">Atualizar Encomenda</string>
    <string name="menu_loja">Menu Loja</string>
    <string name="menu_encomendas">Menu Encomendas</string>
    <string name="encomendas">Encomendas</string>
    <string name="produtos">Produtos</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="listar_produtos">Listar Produtos</string>
    <string name="status_encomenda">Status Encomenda</string>
    <string name="enviado_para_transportadora">Enviado Para a Transportadora</string>
    <string name="id_da_loja">Id da Loja</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="descri_o_do_produto">Descrição do Produto</string>
    <string name="valor_do_produto">Valor do Produto</string>
    <string name="deletar_loja">Deletar Loja</string>
    <string name="produtos_da_loja">Produtos da Loja</string>
    <string name="id">Id:</string>
    <string name="logout">Logout</string>
    <string name="editar_dados_produto">Editar Dados Produto</string>
    <string name="deletar_produto">Deletar Produto</string>
    <string name="encomendas_da_loja">Encomendas da Loja</string>
    <string name="codigo_encomenda">Código Encomenda:</string>
    <string name="dataAlteracao">Data Alteração:</string>
    <string name="editar_encomenda">Editar Encomenda</string>
</resources>