<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/buttonRastrear"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_marginTop="110sp"
            android:layout_marginBottom="20sp"
            android:backgroundTint="@color/green"
            android:text="@string/rastrear_encomenda" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/login_para_lojistas" />

        <TextView
            android:id="@+id/textCnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cnpj" />

        <EditText
            android:id="@+id/editTextCnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/realizar_login" />

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/cadastrar_loja" />

    </LinearLayout>

</FrameLayout>