<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loja.CadastroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/textViewCadastroLojista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"

            android:textAlignment="center"
            android:text="@string/editar_dados_loja" />

        <TextView
            android:id="@+id/textViewNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/nomeLojista" />

        <EditText
            android:id="@+id/editTextNomeLojistaEdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/textViewCnpjEdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/cnpj" />

        <EditText
            android:id="@+id/editTextCnpjEdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/textViewSenhaEdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Senha" />

        <EditText
            android:id="@+id/editTextSenhaEdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/buttonSalvarAlteracoesLoja"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/green"
            android:layout_marginTop="5dp"
            android:text="@string/salvar_altera_es" />

        <Button
            android:id="@+id/buttonDeletarLoja"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/red"
            android:layout_marginTop="5dp"
            android:text="@string/deletar_loja" />

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/black"

            android:text="@string/voltar" />

        <FrameLayout
            android:id="@+id/frame_cadastrarLoja"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </LinearLayout>

</FrameLayout>