<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loja.CadastroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/textViewCadastrarProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/cadastrar_produto" />

        <TextView
            android:id="@+id/textViewIdLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/id_da_loja" />

        <EditText
            android:id="@+id/editTextIdLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

        <TextView
            android:id="@+id/textViewNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/nome_do_produto" />

        <EditText
            android:id="@+id/editTextNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>


        <TextView
            android:id="@+id/textViewValorProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/valor_do_produto" />

        <EditText
            android:id="@+id/editTextValorProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textViewDescricaoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/descri_o_do_produto" />

        <EditText
            android:id="@+id/editTextDescricaoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/buttonCadastrarProdutoFinal"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/green"
            android:layout_marginTop="5dp"
            android:text="@string/cadastrar_produto" />

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/black"

            android:text="@string/voltar" />

        <FrameLayout
            android:id="@+id/frame_cadastrarProduto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </LinearLayout>

</FrameLayout>