<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textCodigoEncomenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/digite_o_c_digo_da_encomenda" />

        <EditText
            android:id="@+id/editTextCodigoEncomenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonRastrearEncomenda"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/green"
            android:text="@string/rastrear_encomenda" />


        <TextView
            android:id="@+id/textEncomenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/encomenda" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:text="@string/status"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/textValorStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_marginTop="15dp"
                android:text="@string/vazio" />

        </LinearLayout>>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDataEnvio"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/data_envio"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textValorDataEnvio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_marginTop="15dp"
                android:text="@string/vazio" />

        </LinearLayout>>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDataAlteracao"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/data_altera_o"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textValorDataAlteracao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_marginTop="15dp"
                android:text="@string/vazio" />

        </LinearLayout>>

        <TextView
            android:id="@+id/textProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:text="Produto" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNomeProduto"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nome"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textValorNomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_marginTop="15dp"
                android:text="@string/vazio" />

        </LinearLayout>>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textValorProduto"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/valor"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textValorValorProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_marginTop="15dp"
                android:text="@string/vazio" />

        </LinearLayout>>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDescricao"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/descri_o"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textValorDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_marginTop="15dp"
                android:text="@string/vazio" />

        </LinearLayout>>

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/black"
            android:layout_marginTop="25dp"
            android:text="@string/voltar" />

        <FrameLayout
            android:id="@+id/frame_rastrearEncomenda"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>
    </LinearLayout>



</FrameLayout>