<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loja.CadastroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/textViewCadastroLojista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"

            android:textAlignment="center"
            android:text="@string/cadastro_para_lojistas" />

        <TextView
            android:id="@+id/textViewNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/nomeLojista" />

        <EditText
            android:id="@+id/editTextNomeLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/textViewCnpjCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/cnpj" />

        <EditText
            android:id="@+id/editTextCnpjCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/textViewSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Senha" />

        <EditText
            android:id="@+id/editTextSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/buttonCadastrarLoja"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/green"
            android:layout_marginTop="5dp"
            android:text="@string/cadastrar_loja" />

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:backgroundTint="@color/black"

            android:text="@string/voltar" />

        <FrameLayout
            android:id="@+id/frame_cadastrarLoja"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </LinearLayout>

</FrameLayout>